Fixed dark mode issues * placeholders colors * reg lite apple button border

--- a/src/components/summit-my-orders-tickets/components/TicketPopup/ticket-popup.scss
+++ b/src/components/summit-my-orders-tickets/components/TicketPopup/ticket-popup.scss
@@ -210,7 +210,7 @@
       border-color: var(--color_input_border_color) !important;
 
       &::placeholder {
-        color: $color-text-input-hints;
+        color: var(--color_text_input_hints);
       }
     }
 
@@ -265,7 +265,7 @@
       border-color: var(--color_input_border_color) !important;
 
       &::placeholder {
-        color: $color-text-input-hints;
+        color: var(--color_text_input_hints);
       }
     }
 
