--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -14,6 +14,7 @@ $color_gray_light : #DFDFDF;
 $color_gray_lighter : #F2F2F2;
 $color_text_input_hints : #c4c4c4;
 $color_input_text_color_light: #363636;
+
 $color_input_background_color_light:#fff;
 $color_input_border_color_light:#dbdbdb;
 $color_input_text_color_dark: #FFFFFF;
@@ -21,6 +22,8 @@ $color_input_background_color_dark:rgb(24, 26, 27);
 $color_input_border_color_dark:rgb(58, 63, 65);
 $color_horizontal_rule_dark: #7B7B7B;
 $color_horizontal_rule_light: #E5E5E5;
+$color_text_input_hints_light:#7B7B7B;
+$color_text_input_hints_dark:#7B7B7B;
 
 :root {
   --color_primary: #{$color_primary};
@@ -39,7 +42,7 @@ $color_horizontal_rule_light: #E5E5E5;
   --color_input_text_color: #{$color_input_text_color_light};
   --color_input_background_color: #{$color_input_background_color_light};
   --color_input_border_color: #{$color_input_border_color_light};
-  --color_text_input_hints: #{$color_input_text_color_light};
+  --color_text_input_hints: #{$color_text_input_hints_light};
   --color_horizontal_rule: #{$color_horizontal_rule_light};
 }
 
@@ -55,6 +58,6 @@ html[data-theme="DARK"] {
   --color_input_text_color: #{$color_input_text_color_dark} !important;
   --color_input_background_color: #{$color_input_background_color_dark} !important;
   --color_input_border_color: #{$color_input_border_color_dark} !important;
-  --color_text_input_hints: #{$color_input_text_color_dark} !important;
+  --color_text_input_hints: #{$color_text_input_hints_dark} !important;
   --color_horizontal_rule: #{$color_horizontal_rule_dark};
 }
